--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,59 @@
+@keyframes showNav {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .search-bar {
+    padding-top:1rem;
+    text-align:center;
     top: 0;
-    background: rgba(0, 0, 0, 0.1);
+}
+
+.search-button {
+    cursor: pointer;
+    position: relative;
+    display: inline-table;
+    font-size: 4rem;
+    top: 7px;
+    margin-left: 2rem;
+}
+
+.search-button:hover {
+    color:#4099FF;
+    transition-duration: 0.25s;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.search-input {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    text-align:center;
+    padding: 5px 16px 5px 16px;
+    color: #292f33;
+    background-color: #f5f8fa;
+    border:
+    1px solid #e1e8ed;
+    border-radius: 5px;
+    transition: all .2s ease-in-out;
 }
 
 .search-text {
     display: -webkit-inline-box;
+    font-size: 1.5rem;
+    letter-spacing:3px;
+    padding-left:1rem;
+    padding-right:1rem;
 }
 
 .dropbtn {
     border: none;
     cursor: pointer;
+    padding:1rem;
 }
 
 .dropdown {
+    cursor: pointer;
     position: relative;
     display: inline-block;
 }
@@ -21,7 +62,7 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 300px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -29,17 +70,29 @@
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
 }
 
-.dropdown-content a:hover {
-    background-color: #f1f1f1
+.dropdown-content div:hover {
+    background-color: #f1f1f1;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+    animation: showNav 500ms ease-in-out both;
+}
+
+.red {
+  color: #FF1B01;
+}
+
+.green {
+  color: #00D000;
+}
+
+.blue {
+  color: #4099FF;
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #f1f1f1;
 }
