--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -123,7 +123,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Arial,sans-serif';
   color: #222; }
 
 
@@ -151,7 +151,9 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
-  margin-top: 0; }
+  margin-top: 0;
+  font-size: 1.5rem
+}
 
 
 /* Links
