--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -118,12 +118,14 @@
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
+
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: 'Arial,sans-serif';
+  font-family: GillSans-Light","Gill Sans","Gill Sans MT",Calibri,sans-serif';
   color: #222; }
 
 
