--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/**
+ *  Search bar
+ */
 @keyframes showNav {
     from {opacity: 0;}
     to {opacity: 1;}
@@ -97,3 +100,137 @@
 .dropdown:hover .dropbtn {
     background-color: #f1f1f1;
 }
+
+
+/**
+ *  Breadcrumbs
+ */
+.breadcrumb {
+	list-style: none;
+	overflow: hidden;
+	font: 18px Helvetica, Arial, Sans-Serif;
+}
+
+.breadcrumb li {
+	float: left;
+}
+
+.breadcrumb li a {
+	color: white;
+	text-decoration: none;
+	padding: 10px 0 10px 65px;
+	background: brown;                   /* fallback color */
+	background: hsla(34,85%,35%,1);
+	position: relative;
+	display: block;
+	float: left;
+}
+
+.breadcrumb li a:after {
+	content: " ";
+	display: block;
+	width: 0;
+	height: 0;
+	border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
+	border-bottom: 50px solid transparent;
+	border-left: 30px solid hsla(34,85%,35%,1);
+	position: absolute;
+	top: 50%;
+	margin-top: -50px;
+	left: 100%;
+	z-index: 2;
+}
+
+.breadcrumb li a:before {
+	content: " ";
+	display: block;
+	width: 0;
+	height: 0;
+	border-top: 50px solid transparent;
+	border-bottom: 50px solid transparent;
+	border-left: 30px solid white;
+	position: absolute;
+	top: 50%;
+	margin-top: -50px;
+	margin-left: 1px;
+	left: 100%;
+	z-index: 1;
+}
+
+.breadcrumb li:first-child a {
+	padding-left: 10px;
+}
+
+.breadcrumb li:nth-child(2) a       { background:        hsla(34,85%,45%,1); }
+.breadcrumb li:nth-child(2) a:after { border-left-color: hsla(34,85%,45%,1); }
+.breadcrumb li:nth-child(3) a       { background:        hsla(34,85%,55%,1); }
+.breadcrumb li:nth-child(3) a:after { border-left-color: hsla(34,85%,55%,1); }
+.breadcrumb li:nth-child(4) a       { background:        hsla(34,85%,65%,1); }
+.breadcrumb li:nth-child(4) a:after { border-left-color: hsla(34,85%,65%,1); }
+.breadcrumb li:nth-child(5) a       { background:        hsla(34,85%,75%,1); }
+.breadcrumb li:nth-child(5) a:after { border-left-color: hsla(34,85%,75%,1); }
+.breadcrumb li:last-child a {
+	background: transparent !important;
+	color: black;
+	pointer-events: none;
+	cursor: default;
+}
+
+.breadcrumb li a:hover { background: hsla(34,85%,25%,1); }
+
+.breadcrumb li a:hover:after { border-left-color: hsla(34,85%,25%,1) !important; }
+
+/**
+ *  Scroll stage
+ */
+.scroll-stage {
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    display:flex;
+}
+
+.scroll-item {
+  max-width:100%;
+}
+
+.scroll-dummy {
+  height: 390px;
+}
+
+.scroll-container > * {
+  height: 390px;
+  max-width : 100%;
+  display:block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+#scroll-list {
+  width : 80%;
+}
+
+.scroll-item {
+  transition: background-color 0.5s ease;
+  border-bottom : 2px solid #B1B1B1;
+  padding-top: 5px;
+  margin-bottom: 5px;
+  width:100%;
+}
+
+.un-focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.focus {
+  box-shadow: 0 0px 60px rgba(36, 255, 0, 0.65);
+  background-color: #FFFFFF;
+}
+
+.image-performer {
+  cursor: zoom-in;
+}
+
+
