--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,6 +62,31 @@ body {
 .title-fragment {
     color:#4099FF;
     cursor: pointer;
+    -webkit-transition:text-shadow 0.75s ease-in-out;
+    -moz-transition:text-shadow 0.75s ease-in-out;
+    -o-transition:text-shadow 0.75s ease-in-out;
+    -ms-transition:text-shadow 0.75s ease-in-out;
+    transition:text-shadow 0.75s ease-in-out;
+}
+
+@keyframes glow {
+    from {
+        text-shadow: none;
+        color:#4099FF;
+    }
+
+    to {
+        text-shadow: 0px 0px 3px #00D000;
+        color: #00D000;
+    }
+}
+
+.text-glow {
+    animation-duration: 1.5s;
+    animation-name: glow;
+    animation-iteration-count: 10;
+    animation-direction: alternate;
+    animation-delay: 2s;
 }
 
 .title-added-at {
@@ -71,7 +96,7 @@ body {
 
 .search-button {
     position: absolute;
-    right: 5rem;
+    right: 6rem;
     top: 11px;
     font-size: 1.7rem;
     cursor: pointer;
@@ -643,7 +668,7 @@ body {
     box-shadow: 0 20px 80px rgba(0, 0, 0, 0.2);
 }
 
-.autoplay {
+.toggle-button {
     width:25%;
     display:inline-table;
     padding-top: 1rem;
@@ -726,4 +751,85 @@ body {
     z-index: 0;
     bottom: 0;
     position: fixed;
+}
+
+
+/**
+ *  Tooltip
+ */
+.tooltip {
+    letter-spacing:0px;
+    -webkit-transition: opacity .75s ease-in-out;
+    -moz-transition: opacity .75s ease-in-out;
+    -ms-transition: opacity .75s ease-in-out;
+    -o-transition: opacity .75s ease-in-out;
+    transition: opacity .75s ease-in-out;
+    position: relative;
+    top: 3px;
+}
+
+.tooltip-close {
+    position:absolute;
+    right: 3px;
+    top:2px;
+    cursor: pointer;
+}
+
+.tooltip-close:hover {
+    color: #FF1B01;
+    transition-duration: 0.25s;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.tooltip__text::before {
+    content: '';
+    opacity:0.9;
+    display: block;
+    width: 0px;
+    height: 0px;
+    background-color: transparent;
+    border: 6px solid transparent;
+    border-bottom: 6px solid #00D000;
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.tooltip__text {
+    background-color: #00D000;
+    border-radius: 4px;
+    font-size: 2rem;
+    opacity:0.85;
+    font-weight: normal;
+    left: 50%;
+    padding: 12px;
+    position: absolute;
+    top: 32px;
+    transform: translateX(-50%);
+    white-space: nowrap;
+}
+
+/**
+ *  highlights
+ */
+.highlight-fragments {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    float: left;
+    position: relative;
+    line-height: 33px;
+}
+
+.highlight-fragment {
+    margin-left: 4rem;
+    cursor: pointer;
+}
+
+.highlight-fragment:hover {
+    color:#4099FF;
+    transition-duration: 0.25s;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
