--- a/public/css/main.css
+++ b/public/css/main.css
@@ -671,7 +671,7 @@ body {
     width:70%;
     padding:1rem;
     overflow-y: scroll;
-    border: 1px solid #E1E8ED;
+    border: 1px solid #242484;
     text-align: center;
     background-color: white;
     border-radius: 3px;
@@ -691,6 +691,31 @@ body {
     top:12rem;
     font-size: 2rem;
     width:55%;
+    opacity:1;
+    -moz-transform-origin: center top;
+    -webkit-transform-origin:top;
+    -moz-animation: 1.5s ease 0s normal none 1 swing;
+    -webkit-animation:swing 1.5s 1 ease-in-out;
+}
+
+@-moz-keyframes swing {
+    0%{-moz-transform:rotate(-10deg)}
+    14%{-moz-transform:rotate(8deg)}
+    28%{-moz-transform:rotate(-6deg)}
+    42%{-moz-transform:rotate(4deg)}
+    56%{-moz-transform:rotate(-2deg)}
+    76%{-moz-transform:rotate(1deg)}
+    100%{-moz-transform:rotate(0deg)}
+}
+
+@-webkit-keyframes swing {
+    0%{-webkit-transform:rotate(-10deg)}
+    14%{-webkit-transform:rotate(8deg)}
+    28%{-webkit-transform:rotate(-6deg)}
+    42%{-webkit-transform:rotate(4deg)}
+    56%{-webkit-transform:rotate(-2deg)}
+    76%{-webkit-transform:rotate(1deg)}
+    100%{-webkit-transform:rotate(0deg)}
 }
 
 .toggle-button {
@@ -767,6 +792,10 @@ body {
 .far-left {
     left:-1000px !important;
     position:absolute;
+}
+
+.transparent {
+    opacity : 0 !important;
 }
 
 .side-bar {
